--- a/Sites/1/skins/Theme_C21/style.css
+++ b/Sites/1/skins/Theme_C21/style.css
@@ -1880,7 +1880,7 @@ blockquote {
 
 .art-footer {
     /*background: #413f40;*/
-    background: #eeeeee;
+    background: #212122;
     /*background-image: url(images/top-header.png); */
     background-repeat: repeat;
     margin: 19px auto 0;
