--- a/Century21Portal-master/Web/Data/Sites/1/skins/Theme_C21/style.css
+++ b/Century21Portal-master/Web/Data/Sites/1/skins/Theme_C21/style.css
@@ -1880,8 +1880,8 @@ blockquote {
 
 .art-footer {
     /*background: #413f40;*/
-    background: #212122;
-    /*background-image: url(images/top-header.png); */
+    /*background: #212122;*/
+    background-image: url(images/footer.png); 
     background-repeat: repeat;
     margin: 19px auto 0;
     position: relative;
@@ -3165,7 +3165,7 @@ th.headerSortUp {
 
 .divse {
     float: left;
-    width: 34%;
+    width: 33%;
     /*border-right: 2px solid #eeb443;*/
     border-right: 2px solid #BEAF87;
     height: 568px;
@@ -5382,13 +5382,13 @@ tr.PagerCss {text-align:center!important;
     }
 .divPathwayH {
     float: left;
-    width: 32%;
+    width: 33%;
     /*border-right: 2px solid #33a066;*/
     border-right: 2px solid #BEAF87;
 }
 .divleaderShipH {
     float: left;
-    width: 34%;
+    width: 33%;
     /*border-right: 2px solid #33a066;*/
     border-right: 2px solid #BEAF87;
 }
