--- a/Sites/1/skins/Theme_C21/style.css
+++ b/Sites/1/skins/Theme_C21/style.css
@@ -1880,8 +1880,8 @@ blockquote {
 
 .art-footer {
     /*background: #413f40;*/
-    background: #212122;
-    /*background-image: url(images/top-header.png); */
+    /*background: #212122;*/
+    background-image: url(images/footer.png); 
     background-repeat: repeat;
     margin: 19px auto 0;
     position: relative;
@@ -3165,7 +3165,7 @@ th.headerSortUp {
 
 .divse {
     float: left;
-    width: 34%;
+    width: 33%;
     /*border-right: 2px solid #eeb443;*/
     border-right: 2px solid #BEAF87;
     height: 568px;
@@ -5331,4 +5331,64 @@ tr.PagerCss {text-align:center!important;
 
 .col-modifieddate {
     width: 3%;
+}
+.salesAssoheader {
+    /*background-color: #00a261;*/
+    /*background-color: #33a066;*/
+    background-color: #A19276;
+    height: 70px;
+    text-align: left;
+    line-height: 40px;
+    font-size: 22px;
+    background-image: url('images/video.png');
+    background-repeat: no-repeat;
+    background-position: 50% 24%;
+    font-weight: normal;
+    color: #fff;
+}
+
+    .salesAssoheader span {
+        padding-left: 138px;
+        padding-top: 10px;
+    }
+
+    .salesAssoheader div {
+        text-align: center;
+        padding-top: 30px;
+    }
+
+.leaderShipheader {
+    /*background-color: #ec4399;*/
+    /*background-color: #5a7fc4;*/
+    background-color: #A19276;
+    height: 70px;
+    text-align: left;
+    line-height: 40px;
+    font-size: 22px;
+    background-image: url('images/news.png');
+    background-repeat: no-repeat;
+    background-position: 50% 24%;
+    font-weight: normal;
+    color: #fff;
+}
+
+    .leaderShipheader span {
+        padding-left: 142px;
+    }
+
+    .leaderShipheader div {
+        padding-top: 30px;
+        text-align: center;
+    }
+.divPathwayH {
+    float: left;
+    width: 33%;
+    /*border-right: 2px solid #33a066;*/
+    border-right: 2px solid #BEAF87;
+}
+.divleaderShipH {
+    float: left;
+    width: 33%;
+    /*border-right: 2px solid #33a066;*/
+    border-right: 2px solid #BEAF87;
 }
