--- a/Century21Portal-master/Web/Data/Sites/1/skins/Theme_C21/layout.Master
+++ b/Century21Portal-master/Web/Data/Sites/1/skins/Theme_C21/layout.Master
@@ -243,7 +243,7 @@
 
                                 <div class="art-footer-text art-footer-text-custom" style="clear: both">
 
-
+                                    
                                     <div class="socialftrlinks">
                                         <p>
 
@@ -258,6 +258,7 @@
 				<portal:skinpreview id="SkinPreview1" runat="server"></portal:skinpreview>--%>
                                             <%--|--%>
                                         </p>
+                                       
                                     </div>
                                     <div id="socialdiv" class="footersocical">
                                       <%--  <portal:FooterFaceBook ID="FooterTwitter1" runat="server"></portal:FooterFaceBook>
@@ -265,7 +266,7 @@
 
                                         <%--<portal:FooterLinkedin ID="FooterLinkedin1" runat="server"></portal:FooterLinkedin>--%>
                                     </div>
-
+                                    <span style="float:right"><img src="../../../../../Images/Century21-C21-logo-2018-1-1-640x480.png" style="height:100px"/></span>
                                     <%--<portal:FooterYouTube ID="FooterYouTube1" runat="server"></portal:FooterYouTube>--%>
                                     <%--                                    <br />
                                     <br />
