--- a/Century21Portal-master/Web/Data/Sites/1/skins/Theme_C21/style.css
+++ b/Century21Portal-master/Web/Data/Sites/1/skins/Theme_C21/style.css
@@ -1128,7 +1128,7 @@ input[type="text"], input[type="password"], input[type="email"], input[type="url
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
-    border: 1px solid #5BA7D0;
+    border: 1px solid #beaf87;
     margin: 0 auto;
 }
 
@@ -1881,7 +1881,7 @@ blockquote {
 .art-footer {
     /*background: #413f40;*/
     /*background: #212122;*/
-    background-image: url(images/footer.png); 
+    background-image: url(images/footer.png);
     background-repeat: repeat;
     margin: 19px auto 0;
     position: relative;
@@ -3106,7 +3106,7 @@ th.headerSortUp {
     height: 70px;
     text-align: left;
     line-height: 40px;
-    font-size: 22px;
+    font-size: 12px;
     background-image: url('images/video.png');
     background-repeat: no-repeat;
     background-position: 50% 24%;
@@ -3131,7 +3131,7 @@ th.headerSortUp {
     height: 70px;
     text-align: left;
     line-height: 40px;
-    font-size: 22px;
+    font-size: 12px;
     background-image: url('images/Social_icon.png');
     background-repeat: no-repeat;
     background-position: 50% 24%;
@@ -3152,7 +3152,7 @@ th.headerSortUp {
     height: 70px;
     text-align: center;
     line-height: 40px;
-    font-size: 22px;
+    font-size: 12px;
     padding: 0px;
 }
 
@@ -3680,8 +3680,8 @@ ul.relatedposts, ul.blognav {
     float: left;
     border: 1px #cacaca solid;
     /*background-color: #eeb111 !important; */
-    /*background-color: #141111 !important;*/
-    background: url("images/top-header.png") !important;
+    background-color: #414042 !important;
+    /*background: url("images/top-header.png") !important;*/
 }
 
     .pic:hover {
@@ -3842,7 +3842,7 @@ ul.relatedposts, ul.blognav {
     height: inherit !important;
     font-size: 12px !important;
     text-transform: uppercase !important;
-    background: #76CAF5 !important;
+    background: #beaf87 !important;
     border-radius: inherit !important;
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.12), inset 0 0 2px rgba(0, 0, 0, 0.15) !important;
     -webkit-transition: 0.15s ease-out !important;
@@ -3882,7 +3882,7 @@ ul.relatedposts, ul.blognav {
     }
 
 .switch-input:checked ~ .switch-label {
-    background: #47a8d8 !important;
+    background: #414042 !important;
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.15), inset 0 0 3px rgba(0, 0, 0, 0.2) !important;
 }
 
@@ -3903,7 +3903,7 @@ ul.relatedposts, ul.blognav {
     height: 28px !important;
     border-radius: 14px !important;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2) !important;
-    background-image: linear-gradient(to bottom, white 40%, #f0f0f0) !important !important;
+    background-image: linear-gradient(to bottom, white 40%, #f0f0f0) !important;
     -webkit-transition: left 0.15s ease-out !important;
     -moz-transition: left 0.15s ease-out !important;
     -o-transition: left 0.15s ease-out !important;
@@ -4295,12 +4295,12 @@ a {
 }
 
 .courseListHeader {
-    background-color: #eff0f4;
+    background-color: #A19276;
     padding-left: 20px;
     min-height: 30px;
     font-family: "Segoe UI",Frutiger,"Frutiger Linotype","Dejavu Sans","Helvetica Neue",Arial,sans-serif;
     font-size: large;
-    padding-top: 5px;
+    padding-top: 8px;
     border-bottom: 1px solid #e7e9ee;
 }
 
@@ -4363,9 +4363,10 @@ a {
 .dropdown {
     border-radius: 5px;
     height: 29px;
-    background-color: #E6EAEB;
-    border: 1px solid #5BA7D0;
+    background-color: #808285;
+    border: 1px solid #808285;
     padding: 4px;
+    color:white;
     /*line-height: 1;
    border: 1px solid #5BA7D0;
    border-radius: 2px;
@@ -4417,7 +4418,7 @@ input.mediumtextbox {
 
 textarea {
     border-radius: 3px !important;
-    width: 100% !important;
+    width: 50% !important;
     padding-left: 2px;
 }
 
@@ -5009,8 +5010,13 @@ p {
 .searchtopnav {
     position: absolute;
     right: 24%;
-    top: -16px;
+    top: 35px;
 }
+#ctl00_SearchInputBox1_txtSearch {
+    width:198px!important;
+    height:15px !important;
+}
+
 
 .needHlptopnav {
     right: 25%;
@@ -5028,9 +5034,10 @@ p {
     bottom: 2px !important;
     position: relative !important;
     display: inline-block;
-    vertical-align: middle;
+    vertical-align: top;
     /* font-size: 0; */
     line-height: 0;
+    font-size:25px;
 }
 
 .art-postcontent ul > li:before, .art-post ul > li:before, .art-textblock ul > li:before {
@@ -5255,6 +5262,7 @@ tr.PagerCss {text-align:center!important;
     float: right;
     color: #1F689C;
     font-weight: bold;
+    font-size: 14px !important;
 }
 
 .lnkLogin {
@@ -5332,6 +5340,7 @@ tr.PagerCss {text-align:center!important;
 .col-modifieddate {
     width: 3%;
 }
+
 .salesAssoheader {
     /*background-color: #00a261;*/
     /*background-color: #33a066;*/
@@ -5339,7 +5348,7 @@ tr.PagerCss {text-align:center!important;
     height: 70px;
     text-align: left;
     line-height: 40px;
-    font-size: 22px;
+    font-size: 12px;
     background-image: url('images/video.png');
     background-repeat: no-repeat;
     background-position: 50% 24%;
@@ -5364,7 +5373,7 @@ tr.PagerCss {text-align:center!important;
     height: 70px;
     text-align: left;
     line-height: 40px;
-    font-size: 22px;
+    font-size: 12px;
     background-image: url('images/news.png');
     background-repeat: no-repeat;
     background-position: 50% 24%;
@@ -5380,15 +5389,35 @@ tr.PagerCss {text-align:center!important;
         padding-top: 30px;
         text-align: center;
     }
+
 .divPathwayH {
     float: left;
     width: 33%;
     /*border-right: 2px solid #33a066;*/
     border-right: 2px solid #BEAF87;
 }
+
 .divleaderShipH {
     float: left;
     width: 33%;
     /*border-right: 2px solid #33a066;*/
     border-right: 2px solid #BEAF87;
 }
+
+.ui-widget-header {
+    background: #BEAF87;
+}
+
+    .ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active {
+        border-color: #BEAF87 !important;
+        Background: #808285 !important;
+    }
+
+    .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
+        border-color: #ffffff !important;
+        Background: #beaf87 !important;
+    }
+
+        .ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited {
+            color: #000000 !important;
+        }
